--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   permission_handler: ^12.0.1
   blue_thermal_printer: ^1.2.3
   fl_chart: ^0.70.1
+  csv: ^6.0.0
+  path_provider: ^2.1.2
+  share_plus: ^7.2.2
 
 dev_dependencies:
   flutter_test:
